change source to wmo

--- a/databuilder.ipynb
+++ b/databuilder.ipynb
@@ -4,16 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# bing 扒下来的数据不靠谱，这个文件没用了"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# 构造数据集\n",
     "\n",
-    "从bing上面爬取图片数据"
+    "从wmo上爬取分类云图"
    ]
   },
   {
@@ -43,7 +36,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "api_url = u\"https://cn.bing.com/images/async?q={keyword}&first={first}&count={count}\""
+    "api_url = u\"https://cloudatlas.wmo.int/api/?&tag=&cldg={cloud_type}&cldt=&sp=&met=&cz=&clcode=&cmcode=&chcode=\"\n",
+    "img_url = u\"https://cloudatlas.wmo.int/images/compressed/{name}\""
    ]
   },
   {
@@ -52,8 +46,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_raw_response(keyword,first=0,count=100):\n",
-    "    url = api_url.format(keyword=keyword,first=first,count=count)\n",
+    "def get_raw_response(cloud_type):\n",
+    "    url = api_url.format(cloud_type=cloud_type)\n",
     "    res = rq.get(url)\n",
     "    if 200 == res.status_code:\n",
     "        return res.text\n",
@@ -67,7 +61,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "keyword_list = [u\"卷云\",u\"卷积云\",u\"卷层云\",u\"高积云\",u\"高层云\",u\"雨层云\",u\"层积云\",u\"层云\",u\"积云\",u\"积雨云\"]"
+    "keyword_list = [u\"卷云\",u\"卷积云\",u\"卷层云\",u\"高积云\",u\"高层云\",u\"雨层云\",u\"层积云\",u\"层云\",u\"积云\",u\"积雨云\"]\n",
+    "type_list = [u\"H1\",u\"H2\",u\"H3\",u\"M1\",u\"M2\",u\"M3\",\"L1\",u\"L2\",u\"L3\",u\"L4\"]"
    ]
   },
   {
@@ -87,7 +82,7 @@
    "outputs": [],
    "source": [
     "#for kw in keyword_list:\n",
-    "#    os.system(\"mkdir %s\"%os.path.join(data_path,kw))"
+    "#    os.system(\"mkdir %s\"%os.path.join(test_data_path,kw))"
    ]
   },
   {
@@ -96,28 +91,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for kw in keyword_list:\n",
-    "    print(\"processing %s\"%kw)\n",
-    "    res = get_raw_response(kw)\n",
-    "    if not res:\n",
-    "        continue\n",
-    "    soup = BeautifulSoup(res)\n",
-    "    tags = soup.findAll(lambda tag:tag.has_attr(\"class\") and \"mimg\" in tag['class'])\n",
-    "    for i,t in enumerate(tags):\n",
-    "        if t.has_attr(\"src\"):\n",
-    "            img_url = t[\"src\"]\n",
-    "        elif t.has_attr(\"data-src\"):\n",
-    "            img_url = t[\"data-src\"]\n",
-    "        else:\n",
-    "            continue\n",
-    "        print(\"handling idx %d in %s\"%(i,kw))\n",
-    "        raw_img = rq.get(img_url).content\n",
-    "        with BytesIO() as tmp:\n",
-    "            tmp.write(raw_img)\n",
-    "            img = Image.open(tmp)\n",
-    "            img_name = \"%d.jpg\"%i\n",
-    "            full_path = os.path.join(data_path,kw,img_name)\n",
-    "            img.save(full_path)"
+    "def parse_raw_response(res):\n",
+    "    names = []\n",
+    "    for line in res.strip().split('\\n'):\n",
+    "        try:\n",
+    "            idx,_,name,_,author = line.strip().split(';')\n",
+    "            name,ext = os.path.splitext(name)\n",
+    "            if(name.endswith(\"_m\")):\n",
+    "                name = name[:-2]\n",
+    "            full_name = \"{idx}_main_{name}{ext}\".format(idx=idx,name=name,ext=ext)\n",
+    "            names.append(full_name)\n",
+    "        except:\n",
+    "            print(\"err in {}\".format(line))\n",
+    "        \n",
+    "    return names"
    ]
   },
   {
@@ -125,14 +112,49 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def download_img(img_name,path):\n",
+    "    url = img_url.format(name=img_name)\n",
+    "    full_path = os.path.join(path,img_name)\n",
+    "    print(\"downloading {}\".format(url))\n",
+    "    if(os.path.exists(full_path)):\n",
+    "        return\n",
+    "    with open(full_path,\"wb\") as f:\n",
+    "        f.write(rq.get(url).content)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "for idx,path in enumerate(keyword_list):\n",
+    "    cloud_type = type_list[idx]\n",
+    "    data_save_path = os.path.join(data_path,path)\n",
+    "    test_save_path = os.path.join(test_data_path,path)\n",
+    "    print(\"handling {type}\".format(type=path))\n",
+    "    raw = get_raw_response(cloud_type)\n",
+    "    names = parse_raw_response(raw)\n",
+    "    \n",
+    "    split_point = int(len(names)*0.8)\n",
+    "    data = names[:split_point]\n",
+    "    test = names[split_point:]\n",
+    "    \n",
+    "    for n in data:\n",
+    "        download_img(n,data_save_path)\n",
+    "    for n in test:\n",
+    "        download_img(n,test_save_path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "raw"
+   ]
   },
   {
    "cell_type": "code",
