--- a/SeeTheCloud.ipynb
+++ b/SeeTheCloud.ipynb
@@ -9,8 +9,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-07-01T09:08:24.756505Z",
+     "start_time": "2018-07-01T09:08:24.749486Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import pickle\n",
@@ -19,12 +24,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-07-01T09:08:25.556633Z",
+     "start_time": "2018-07-01T09:08:24.765529Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import torch\n",
-    "from torchvision import transforms, datasets, models"
+    "from torchvision import transforms, datasets, models\n",
+    "import torch.nn as nn\n",
+    "import torch.nn.functional as F"
    ]
   },
   {
@@ -36,8 +48,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-07-01T09:08:25.568663Z",
+     "start_time": "2018-07-01T09:08:25.560672Z"
+    }
+   },
    "outputs": [],
    "source": [
     "train_data_path = r\"./data\"\n",
@@ -46,11 +63,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-07-01T09:08:25.586713Z",
+     "start_time": "2018-07-01T09:08:25.575682Z"
+    }
+   },
    "outputs": [],
    "source": [
-    "batch_size = 16"
+    "batch_size = 8"
    ]
   },
   {
@@ -62,12 +84,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-07-01T09:08:25.603756Z",
+     "start_time": "2018-07-01T09:08:25.594732Z"
+    }
+   },
    "outputs": [],
    "source": [
     "data_transform = transforms.Compose([\n",
-    "    transforms.RandomResizedCrop(224),\n",
+    "    transforms.RandomAffine(90),\n",
+    "    transforms.RandomGrayscale(),\n",
+    "    transforms.RandomResizedCrop(256),\n",
     "    transforms.ColorJitter(),\n",
     "    transforms.ToTensor()\n",
     "])"
@@ -75,8 +104,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-07-01T09:08:25.629826Z",
+     "start_time": "2018-07-01T09:08:25.610777Z"
+    }
+   },
    "outputs": [],
    "source": [
     "cloud_datasets = datasets.ImageFolder(train_data_path,transform=data_transform)"
@@ -84,8 +118,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-07-01T09:08:25.643862Z",
+     "start_time": "2018-07-01T09:08:25.635843Z"
+    }
+   },
    "outputs": [],
    "source": [
     "image_loader = torch.utils.data.DataLoader(cloud_datasets,batch_size=batch_size,shuffle=True,num_workers=4)"
@@ -100,17 +139,134 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-07-01T09:08:25.657900Z",
+     "start_time": "2018-07-01T09:08:25.651884Z"
+    }
+   },
    "outputs": [],
    "source": [
-    "classifier = models.resnet50(num_classes=10)"
+    "INPUT_PLANES = 3\n",
+    "FIRST_LAYER_PLANES = 10"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-07-01T09:08:25.674945Z",
+     "start_time": "2018-07-01T09:08:25.662913Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "class BaseBlock(nn.Module):\n",
+    "    def __init__(self, in_planes, out_planes):\n",
+    "        super(BaseBlock, self).__init__()\n",
+    "        self.conv1 = nn.Conv2d(in_planes,out_planes,3,padding=1)\n",
+    "        self.conv2 = nn.Conv2d(out_planes,out_planes,3,padding=1)\n",
+    "        self.shortcut = nn.Conv2d(in_planes,out_planes,1)\n",
+    "        \n",
+    "    def forward(self, x_in):\n",
+    "        x1 = self.conv1(x_in)\n",
+    "        x1 = F.relu(x1,inplace=True)\n",
+    "        x1 = F.dropout(x1)\n",
+    "        x1 = self.conv2(x1)\n",
+    "        x1 = F.relu(x1,inplace=True)\n",
+    "        x1 = F.dropout(x1)\n",
+    "        x2 = self.shortcut(x_in)\n",
+    "        \n",
+    "        x_out = x1+x2\n",
+    "        x_out = F.instance_norm(x_out)\n",
+    "        x_out = F.dropout(x_out)\n",
+    "        x_out = F.avg_pool2d(x_out,2)\n",
+    "        \n",
+    "        return x_out\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-07-01T09:08:25.689986Z",
+     "start_time": "2018-07-01T09:08:25.678956Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "class MyNet(nn.Module):\n",
+    "    def __init__(self, planes, num_class):\n",
+    "        super(MyNet, self).__init__()\n",
+    "        self.layers = nn.ModuleList()\n",
+    "        self.first_layer = nn.Conv2d(INPUT_PLANES,FIRST_LAYER_PLANES,1,padding=0)\n",
+    "        self.out_layer = nn.Conv2d(planes[-1],num_class,1)\n",
+    "        self.fc = nn.Linear(64*num_class,num_class)\n",
+    "        pre_num = FIRST_LAYER_PLANES\n",
+    "        for p in planes:\n",
+    "            self.layers.append(BaseBlock(pre_num,p))\n",
+    "            pre_num = p\n",
+    "            \n",
+    "    def forward(self, x):\n",
+    "        x = self.first_layer(x)\n",
+    "        for l in self.layers:\n",
+    "            x = l(x)\n",
+    "        x = self.out_layer(x)\n",
+    "        x = x.view(x.size(0), -1)\n",
+    "        x = self.fc(x)\n",
+    "        \n",
+    "        return x\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-07-01T09:08:25.709038Z",
+     "start_time": "2018-07-01T09:08:25.693998Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "planes = [64,64,128,256,256]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-07-01T09:08:25.778247Z",
+     "start_time": "2018-07-01T09:08:25.716055Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "classifier = MyNet(planes,10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-07-01T09:08:25.805292Z",
+     "start_time": "2018-07-01T09:08:25.790252Z"
+    }
+   },
    "outputs": [],
    "source": [
     "model_path = r\"./model\""
@@ -118,8 +274,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-07-01T09:08:25.814317Z",
+     "start_time": "2018-07-01T09:08:25.809303Z"
+    }
+   },
    "outputs": [],
    "source": [
     "model_name = r\"model.pickle\""
@@ -127,8 +288,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-07-01T09:08:25.850412Z",
+     "start_time": "2018-07-01T09:08:25.818327Z"
+    }
+   },
    "outputs": [],
    "source": [
     "try:\n",
@@ -155,8 +321,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-07-01T09:08:25.860439Z",
+     "start_time": "2018-07-01T09:08:25.854423Z"
+    }
+   },
    "outputs": [],
    "source": [
     "loss = torch.nn.CrossEntropyLoss()\n",
@@ -172,14 +343,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-07-01T09:08:25.876481Z",
+     "start_time": "2018-07-01T09:08:25.865452Z"
+    }
+   },
    "outputs": [],
    "source": [
     "def train(model, loss, optimizer, data_loader, epochs = 1, cuda = True):\n",
     "    if cuda:\n",
     "        device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
     "        model.to(device)\n",
+    "        model.train()\n",
     "    for epoch in range(epochs):\n",
     "        running_loss = 0.0\n",
     "        running_corrects = 0.0\n",
@@ -206,7 +383,7 @@
     "            running_corrects += torch.sum(preds == labels.data)\n",
     "            data_sizes += len(labels)\n",
     "            \n",
-    "        print('[%d, %5d] loss: %.3f, acc: %.3f' %\n",
+    "        print('[%d, %5d] loss: %.6f, acc: %.6f' %\n",
     "          (epoch + 1, data_sizes, running_loss / data_sizes, running_corrects.item() / data_sizes))"
    ]
   },
@@ -219,28 +396,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1,   324] loss: 0.039, acc: 0.772\n",
-      "[2,   324] loss: 0.039, acc: 0.793\n",
-      "[3,   324] loss: 0.037, acc: 0.840\n",
-      "[4,   324] loss: 0.036, acc: 0.793\n",
-      "[5,   324] loss: 0.039, acc: 0.796\n",
-      "[6,   324] loss: 0.036, acc: 0.836\n",
-      "[7,   324] loss: 0.036, acc: 0.855\n",
-      "[8,   324] loss: 0.039, acc: 0.806\n",
-      "[9,   324] loss: 0.031, acc: 0.840\n",
-      "[10,   324] loss: 0.032, acc: 0.849\n"
-     ]
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2018-07-01T09:56:48.891Z"
     }
-   ],
+   },
+   "outputs": [],
    "source": [
-    "train(classifier,loss, optimizer, image_loader, epochs=10)"
+    "train(classifier,loss, optimizer, image_loader, epochs=100)"
    ]
   },
   {
@@ -252,8 +416,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2018-07-01T09:56:49.742Z"
+    }
+   },
    "outputs": [],
    "source": [
     "with open(os.path.join(model_path,model_name),\"wb\") as f:\n",
